--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ share/python-wheels/
 .installed.cfg
 *.egg
 MANIFEST
+this.tar
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
